--- a/index.html
+++ b/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
+
   <head>
+    <!-- Used by keyboard -->
     <meta charset="utf-8">
-    <title></title>
+
+    <title>Who Am I</title>
+
+    <!-- Used by Browser or Google Search-->
+   <meta name="author" content="Kevin Deng">
+   <meta name="description" content="Webpage about who I am">
+   <meta name="keywords" content="HTMl, Who Am I, starter code">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
+
+   <!-- meta http-equiv="default-style" content=""--> <!-- content matches css link exactly-->
+
+   <!-- Other meta attributes to be aware of -->
+
+   <!-- meta http-equiv="refresh" content="30"-->
+   <!-- Content forces a Internet Request to refresh webpage every "time value in seconds" -->
+   <!-- Use this when refreshes are needed -->
+
+   <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
+   <!-- Already specified in the charset above-->
+
+   <style>
+            * {
+              box-sizing: border-box;
+            }
+
+            /* div {border: thin dotted red;} */
+
+            .header {
+              /* border: 1px solid red; */
+              padding: 15px;
+            }
+
+            .menu {
+              width: 25%;
+              float: left;
+              padding: 15px;
+              /* border: 1px solid red; */
+            }
+
+            .main {
+              width: 50%;
+              float: left;
+              padding: 15px;
+              /* border: 1px solid red; */
+            }
+
+            .aside {
+              width: 25%;
+              float: left;
+              padding: 15px;
+              /* border: 1px solid red; */
+            }
+
+            .footer {
+              border: 1px solid red;
+              padding: 15px;
+            }
+        </style>
+
   </head>
+
+
+
+
   <body>
 
   </body>
+
 </html>
+
+/<footer>
+
+
+
+
+
+</footer>
