--- a/index.html
+++ b/index.html
@@ -26,55 +26,16 @@
    <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
    <!-- Already specified in the charset above-->
 
-   <style>
-            * {
-              box-sizing: border-box;
-            }
-
-            /* div {border: thin dotted red;} */
-
-            .header {
-              /* border: 1px solid red; */
-              padding: 15px;
-            }
-
-            .menu {
-              width: 25%;
-              float: left;
-              padding: 15px;
-              /* border: 1px solid red; */
-            }
-
-            .main {
-              width: 50%;
-              float: left;
-              padding: 15px;
-              /* border: 1px solid red; */
-            }
-
-            .aside {
-              width: 25%;
-              float: left;
-              padding: 15px;
-              /* border: 1px solid red; */
-            }
-
-            .footer {
-              border: 1px solid red;
-              padding: 15px;
-            }
-        </style>
-
   </head>
 
-
-
-
   <body>
+    <div class="menu">
+      <ul>
+        <!--Date Accessed: 20201122-->
+        <li><a href="index.html">Introduction</a>
 
   </body>
 
-</html>
 
 /<footer>
 
@@ -83,3 +44,5 @@
 
 
 </footer>
+
+</html>
