--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <title>Who Am I</title>
 
+    <link rel="stylesheet" href="style.css">
+
     <!-- Used by Browser or Google Search-->
    <meta name="author" content="Kevin Deng">
    <meta name="description" content="Webpage about who I am">
@@ -37,7 +39,7 @@
   </body>
 
 
-/<footer>
+<footer>
 
 
 
