--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       <ul>
         <!--Date Accessed: 20201122-->
         <li><a href="index.html">Introduction</a>
+        <li><a href="childPages\My Family\My Family.html">My Family</a>
+        <li><a href="childPages\Chinese Celebrations and Customs\Chinese Celebrations and Customs.html">Chinese: Celebrations and Customs</a>
+        <li><a href="childPages\Chinese Food\Chinese Food.html">Chinese: Food</a>
+        <li><a href="childPages\Early Childhood\Early Childhood.html">Early Childhood</a>
+        <li><a href="childPages\Hobbies and Pastimes\Hobbies and Pastimes.html">Hobbies and Pastimes</a>
+     </ul>
+   </div>
+   <div class="main">
 
   </body>
 
@@ -44,7 +52,7 @@
 
 
 
-
+<p>&copy Kevin Deng, powered by kevindeng0304 in Github<p>
 </footer>
 
 </html>
