--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="menu">
       <ul>
         <!--Date Accessed: 20201122-->
+        <stong> Navigation </stong>
         <li><a href="index.html">Introduction</a>
         <li><a href="childPages\My Family\My Family.html">My Family</a>
         <li><a href="childPages\Chinese Celebrations and Customs\Chinese Celebrations and Customs.html">Chinese: Celebrations and Customs</a>
