--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="menu">
       <ul>
         <!--Date Accessed: 20201122-->
-        <stong style="font-size 2vw;color: #FFFFFF; background-color:lightsteelblue"> navigation </stong>
+        <stong style="font-size:1.5vw ;color: #FFFFFF"> navigation </stong>
         <li><a href="index.html">Introduction</a>
         <li><a href="childPages\My Family\My Family.html">My Family</a>
         <li><a href="childPages\Chinese Celebrations and Customs\Chinese Celebrations and Customs.html">Chinese: Celebrations and Customs</a>
