--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <ul>
         <!--Date Accessed: 20201122-->
         <li>Navigation</a>
-        <li><a href="index.html">Introduction</a>
-        <li><a href="childPages\My Family\My Family.html">My Family</a>
-        <li><a href="childPages\Chinese Celebrations and Customs\Chinese Celebrations and Customs.html">Chinese: Celebrations and Customs</a>
-        <li><a href="childPages\Chinese Food\Chinese Food.html">Chinese: Food</a>
-        <li><a href="childPages\Early Childhood\Early Childhood.html">Early Childhood</a>
-        <li><a href="childPages\Hobbies and Pastimes\Hobbies and Pastimes.html">Hobbies and Pastimes</a>
+        <li><a href="index.html">Who Am I?</a>
+        <li><a href="childPages\Family\Family.html"></a>
+        <li><a href="childPages\Culture\Culture.html">Culture</a>
+        <li><a href="childPages\Food\Food.html">Food</a>
+        <li><a href="childPages\Career Plan\Career Plan.html"></a>
+        <li><a href="childPages\Hobbies\Hobbies.html">Hobbies</a>
      </ul>
    </div>
    <div class="main">
