--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
 
 
 <footer>
-
-
-
-
-<p>&copy Kevin Deng, powered by kevindeng0304 in Github<p>
+  <blockquote cite="https://www.goodreads.com/quotes/8287-i-have-not-failed-i-ve-just-found-10-000-ways-that">
+          <!-- Date Accessed 20201120-->
+        </blockquote>
+        <p>
+          <strong>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</strong>
+          <em><a href="https://www.goodreads.com/quotes/8287-i-have-not-failed-i-ve-just-found-10-000-ways-that" target="_blank">
+            - Albert Einstein</a>
+          </em>
+        </p>
+        <p>&copy Kevin Deng, powered by kevindeng0304 in Github<p>
 </footer>
 
 </html>
