--- a/index.html
+++ b/index.html
@@ -35,15 +35,12 @@
       <ul>
         <!--Date Accessed: 20201122-->
         <li><a href="index.html">Who Am I?</a>
-        <li><a href="childPages\Family\Family.html"></a>
+        <li><a href="childPages\Family\Family.html">Family</a>
         <li><a href="childPages\Culture\Culture.html">Culture</a>
-        <li><a href="childPages\Food\Food.html">Food</a>
-        <li><a href="childPages\Career Plan\Career Plan.html"></a>
         <li><a href="childPages\Hobbies\Hobbies.html">Hobbies</a>
      </ul>
    </div>
    <div class="main">
-
   </body>
 
 
