--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <!-- Date Accessed 20201120-->
         </blockquote>
         <p>
-          <strong>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</strong>
+          <strong>“I have not failed. I've just found 10,000 ways that won't work.”</strong>
           <em><a href="https://www.goodreads.com/quotes/8287-i-have-not-failed-i-ve-just-found-10-000-ways-that" target="_blank">
-            - Albert Einstein</a>
+            ― Thomas A. Edison</a>
           </em>
         </p>
         <p>&copy Kevin Deng, powered by kevindeng0304 in Github<p>
