--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
      </ul>
    </div>
    <div class="main">
+     <div class="main-text">
+       <h1>Who Am I?</h1>
+       <section>
+         <h3>Introduction</h3>
+         <aricle>
+           <p>
+             My name is Kevin Deng, I am Chinese and was born in Canada, I'm currently a grade 11 student at Lilian Osborn High School.
+             I like to play the piano and watch YouTube videos during my spare time. I am not a very social person
+             but I still like meeting new people with similar interests.
+            </p>
+          </article>
+        </section>
+        <br><br><br>
+        <section>
+          <h3>Career Plans</h3>
+          <article>
+            <p>
+              In the future I hope I can get into the University of British Columbia in order to study business or economics.
+              I am very interested in the stock market and would love to learn more about investments.
+              However, I also want to apply to the University of Alberta because I want to live close to my family.
+              I may also decide to pursue computer science if I still enjoy it after I graduate from Highschool, but honestly I'm very uncertain about the future.
+            </p>
+          </article>
+        </section>
+      </div>
+    </div>
   </body>
 
 
