--- a/childpages/Family/Family.html
+++ b/childpages/Family/Family.html
@@ -38,3 +38,49 @@
         <li><a href="..\Family\Family.html">Family</a>
         <li><a href="..\Culture\Culture.html">Culture</a>
         <li><a href="..\Hobbies\Hobbies.html">Hobbies</a>
+        </ul>
+      </div>
+      <div class="main">
+        <div class="main-text">
+          <h1>Who Am I?</h1>
+          <section>
+            <h3>Introduction</h3>
+            <aricle>
+              <p>
+                My name is Kevin Deng, I am Chinese and was born in Canada, I'm currently a grade 11 student at Lilian Osborn High School.
+                I like to play the piano and watch YouTube videos during my spare time. I am not a very social person
+                but I still like meeting new people with similar interests.
+               </p>
+             </article>
+           </section>
+           <br><br><br>
+           <section>
+             <h3>Career Plans</h3>
+             <article>
+               <p>
+                 In the future I hope I can get into the University of British Columbia in order to study business or economics.
+                 I am very interested in the stock market and would love to learn more about investments.
+                 However, I also want to apply to the University of Alberta because I want to live close to my family.
+                 I may also decide to pursue computer science if I still enjoy it after I graduate from Highschool, but honestly I'm very uncertain about the future.
+               </p>
+             </article>
+           </section>
+         </div>
+       </div>
+     </body>
+
+
+   <footer>
+     <blockquote cite="https://www.goodreads.com/quotes/8287-i-have-not-failed-i-ve-just-found-10-000-ways-that">
+             <!-- Date Accessed 20201120-->
+           </blockquote>
+           <p>
+             <strong>“I have not failed. I've just found 10,000 ways that won't work.”</strong>
+             <em><a href="https://www.goodreads.com/quotes/8287-i-have-not-failed-i-ve-just-found-10-000-ways-that" target="_blank">
+               ― Thomas A. Edison</a>
+             </em>
+           </p>
+           <p>&copy Kevin Deng, powered by kevindeng0304 in Github<p>
+   </footer>
+
+   </html>
